--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "remark-html": "^15.0.1"
   },
   "devDependencies": {
+    "@types/node": "18.11.17",
+    "@types/react": "18.0.26",
     "eslint-config-next": "^13.1.0"
   }
 }
